--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -15,9 +15,6 @@ glx-swap-method = "undefined";
 
 # Shadow
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
 shadow-radius = 7.5;
 shadow-offset-x = -11;
 shadow-offset-y = -4.5;
@@ -26,10 +23,13 @@ shadow-opacity = 0.36;
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
 shadow-exclude = [
+  "! name~=''",
+  "name = 'Plank'",
 	"name = 'Notification'",
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
+  "class_g = 'Firefox' && argb",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 # shadow-exclude = "n:e:Notification";
@@ -37,19 +37,16 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 1.0;
 inactive-opacity = 1.0;
 active-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 # blur-background = true;
 # blur-background-frame = true;
 # blur-kern = "3x3box";
-# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-# blur-background-fixed = true;
+blur-background-fixed = false;
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
@@ -75,7 +72,6 @@ detect-client-opacity = true;
 refresh-rate = 0;
 vsync = "opengl-swc";
 dbe = false;
-paint-on-overlay = true;
 sw-opti = true;
 unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
@@ -90,4 +86,20 @@ invert-color-include = [ ];
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; };
+  dock =
+  {
+    shadow = false;
+  };
+  dnd =
+  {
+    shadow = true;
+  };
+  popup_menu =
+  {
+    opacity = 1.0;
+  };
+  dropdown_menu =
+  {
+    opacity = 1.0;
+  };
 };
