--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -58,9 +58,9 @@ glx-copy-from-front = false;
 shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 14;
-# The left offset for shadows. (default -15)
+# The left offset for shadows. (default -15) -11
 shadow-offset-x = -16;
-# The top offset for shadows. (default -15)
+# The top offset for shadows. (default -15) -4.5
 shadow-offset-y = -12;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.40;
@@ -79,7 +79,7 @@ shadow-exclude = [
     "name = 'Plank'",
     "name = 'Docky'",
     "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
+    # "name = 'xfce4-notifyd'",
     "name *= 'VLC'",
     "name *= 'compton'",
     "name *= 'picom'",
@@ -91,8 +91,8 @@ shadow-exclude = [
     "class_g = 'Synapse'",
     "class_g ?= 'Notify-osd'",
     "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
+    # "class_g ?= 'Xfce4-notifyd'",
+    # "class_g ?= 'Xfce4-power-manager'",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
