--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -58,9 +58,9 @@ glx-copy-from-front = false;
 shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 14;
-# The left offset for shadows. (default -15) -11
+# The left offset for shadows. (default -15)
 shadow-offset-x = -16;
-# The top offset for shadows. (default -15) -4.5
+# The top offset for shadows. (default -15)
 shadow-offset-y = -12;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.40;
