added spectrwm config

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -35,8 +35,9 @@ bar_color[1] = rgb:37/40/29
 bar_color_selected[1] = rgb:37/40/29
 bar_font_color[1] = rgb:f2/f2/f0
 bar_font_color_selected = rgb:f2/f2/f0
-bar_font = JetBrains Mono:pixelsize=22:antialias=true
-bar_action = /home/pierre/.local/bin/bar.sh
+bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desktop:pixelsize=22:antialias=true
+bar_action = /home/pierre/.local/bin/bar
+bar_action_expand = 1
 bar_justify = right
 bar_format = +R:+I +S <+D>+4<+A+12<
 # workspace_indicator = listcurrent,listactive,markcurrent,printnames
@@ -72,7 +73,7 @@ autorun = ws[1]:picom --config /home/pierre/.config/picom.conf -b
 # layout = ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-name = ws[1]:$
+name = ws[1]:cmd
 name = ws[2]:www
 name = ws[3]:IDE
 # name = ws[3]:Browse
@@ -145,6 +146,7 @@ program[DP] = alacritty --class sDP -d 13 6 --command /home/pierre/.local/bin/sD
 quirk[jetbrains-toolbox] = FLOAT + ANYWHERE
 quirk[Pavucontrol] = FLOAT + ANYWHERE
 quirk[Alacritty:sDP] = FLOAT + FOCUSPREV
+quirk[pritunl] = FLOAT + FOCUSPREV
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
