wip spectrwm config

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -33,10 +33,11 @@ bar_border[1] = rgb:37/40/29
 bar_border_unfocus[1] = rgb:37/40/29
 bar_color[1] = rgb:37/40/29
 bar_color_selected[1] = rgb:37/40/29
-bar_font_color[1] = rgb:f2/f2/f0
+bar_font_color[1] = rgb:f2/f2/f0,rgb:ed/51/35,rgb:9b/a6/72
 bar_font_color_selected = rgb:f2/f2/f0
 bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desktop:pixelsize=22:antialias=true
 bar_action = /home/pierre/.local/bin/bar
+# bar_action = /home/pierre/.local/bin/bar.sh
 bar_action_expand = 1
 bar_justify = right
 bar_format = +R:+I +S <+D>+4<+A+12<
@@ -147,6 +148,7 @@ quirk[jetbrains-toolbox] = FLOAT + ANYWHERE
 quirk[Pavucontrol] = FLOAT + ANYWHERE
 quirk[Alacritty:sDP] = FLOAT + FOCUSPREV
 quirk[pritunl] = FLOAT + FOCUSPREV
+quirk[Ristretto] = FLOAT + ANYWHERE
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
