--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -40,8 +40,8 @@ bar_action = /home/pierre/.local/bin/bar
 # bar_action = /home/pierre/.local/bin/bar.sh
 bar_action_expand = 1
 bar_justify = right
-bar_format = +R:+I +S <+D>+4<+A+12<
-# workspace_indicator = listcurrent,listactive,markcurrent,printnames
+bar_format = +R:+I +S <+D>  +A+20<
+workspace_indicator = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom = 1
 # stack_enabled = 1
 clock_enabled = 0
@@ -62,9 +62,9 @@ maximize_hide_bar = 1
 # region = screen[1]:1280x1024+1280+0
 
 # Launch applications in a workspace of choice
-# autorun = ws[1]:xterm
-# autorun = ws[2]:xombrero http://www.openbsd.org
+autorun = ws[1]:start-pulseaudio-x11
 autorun = ws[1]:picom --config /home/pierre/.config/picom.conf -b
+autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
 
 # Customize workspace layout at start
 # layout = ws[1]:4:0:0:0:vertical
@@ -117,7 +117,10 @@ program[lightDown] = light -U 5
 program[volumeUp] = pactl set-sink-volume @DEFAULT_SINK@ +5%
 program[volumeDown] = pactl set-sink-volume @DEFAULT_SINK@ -5%
 program[volumeMute] = pactl set-sink-mute @DEFAULT_SINK@ toggle
-program[micMute] = pactl set-source-mute @DEFAULT_SOURCE@ toggle
+program[micMute] = pactl set-source-mute 1 toggle
+
+#redshift
+program[redshift_toggle] = pkill -USR1 redshift
 
 # various
 program[alacritty] = alacritty
@@ -144,11 +147,13 @@ program[DP] = alacritty --class sDP -d 13 6 --command /home/pierre/.local/bin/sD
 # quirk[Xitk:Xine Window] = FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb] = FLOAT
-quirk[jetbrains-toolbox] = FLOAT + ANYWHERE
-quirk[Pavucontrol] = FLOAT + ANYWHERE
+quirk[jetbrains-toolbox] = FLOAT
+quirk[Pavucontrol] = FLOAT
 quirk[Alacritty:sDP] = FLOAT + FOCUSPREV
 quirk[pritunl] = FLOAT + FOCUSPREV
 quirk[Ristretto] = FLOAT + ANYWHERE
+quirk[jetbrains-webstorm] = FLOAT
+quirk[Thunar] = FLOAT
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
@@ -261,6 +266,7 @@ bind[clipshot] = MOD+c
 bind[translate] = MOD+n
 bind[DP] = MOD+y
 bind[fullscreen_toggle] = MOD+Shift+f
+bind[redshift_toggle] = MOD+asterisk
 
 # disable default programs
 bind[] = MOD+Shift+Delete # lock
