--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -40,7 +40,7 @@ bar_action = /home/pierre/.local/bin/bar
 # bar_action = /home/pierre/.local/bin/bar.sh
 bar_action_expand = 1
 bar_justify = right
-bar_format = +R:+I +S <+D>  +A+20<
+bar_format = +R:+I +S <+D>  +A+10<
 workspace_indicator = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom = 1
 # stack_enabled = 1
@@ -77,6 +77,7 @@ autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
 name = ws[1]:cmd
 name = ws[2]:www
 name = ws[3]:IDE
+name = ws[4]:tra
 # name = ws[3]:Browse
 # name = ws[10]:Music
 
@@ -154,6 +155,7 @@ quirk[pritunl] = FLOAT + FOCUSPREV
 quirk[Ristretto] = FLOAT + ANYWHERE
 quirk[jetbrains-webstorm] = FLOAT
 quirk[Thunar] = FLOAT
+quirk[Galculator] = FLOAT
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
