add nnn env vars

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -156,6 +156,7 @@ quirk[Ristretto] = FLOAT + ANYWHERE
 quirk[jetbrains-webstorm] = FLOAT
 quirk[Thunar] = FLOAT
 quirk[Galculator] = FLOAT
+quirk[feh] = FLOAT
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
