--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -157,6 +157,7 @@ quirk[jetbrains-webstorm] = FLOAT
 quirk[Thunar] = FLOAT
 quirk[Galculator] = FLOAT
 quirk[feh] = FLOAT
+quirk[nnn] = FLOAT
 
 # Key bindings for French (fr) keyboards
 # unbind with: bind[] = <keys>
