--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -77,7 +77,7 @@ autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
 name = ws[1]:cmd
 name = ws[2]:www
 name = ws[3]:IDE
-name = ws[4]:tra
+name = ws[4]:slack
 # name = ws[3]:Browse
 # name = ws[10]:Music
 
@@ -127,6 +127,7 @@ program[redshift_toggle] = pkill -USR1 redshift
 program[alacritty] = alacritty
 program[lock] = /home/pierre/.local/bin/lock.sh
 program[rofi] = rofi -show drun
+program[windows] = rofi -show window
 program[screenshot] = /home/pierre/.local/bin/screenshot.sh
 program[clipshot] = /home/pierre/.local/bin/clipshot.sh
 program[translate] = vimb https://translate.google.fr/
@@ -177,7 +178,7 @@ bind[focus_prev] = MOD+Shift+Tab
 bind[focus_urgent] = MOD+u
 bind[height_grow] = MOD+Shift+equal
 bind[height_shrink] = MOD+Shift+minus
-bind[iconify] = MOD+w
+bind[iconify] = MOD+o
 # bind[initscr] = MOD+Shift+i
 bind[lock] = MOD+Shift+Delete
 bind[master_add] = MOD+comma
@@ -204,7 +205,7 @@ bind[mvws_2] = MOD+Shift+eacute
 bind[mvws_3] = MOD+Shift+quotedbl
 bind[mvws_4] = MOD+Shift+apostrophe
 bind[mvws_5] = MOD+Shift+parenleft
-bind[mvws_6] = MOD+Shift+hyphen
+bind[mvws_6] = MOD+Shift+minus
 bind[mvws_7] = MOD+Shift+egrave
 bind[mvws_8] = MOD+Shift+underscore
 bind[mvws_9] = MOD+Shift+ccedilla
@@ -231,7 +232,7 @@ bind[swap_main] = MOD+Return
 bind[swap_next] = MOD+Shift+j
 bind[swap_prev] = MOD+Shift+k
 bind[term] = MOD+Shift+Return
-bind[uniconify] = MOD+Shift+w
+bind[uniconify] = MOD+Shift+o
 bind[version] = MOD+Shift+v
 bind[width_grow] = MOD+equal
 bind[width_shrink] = MOD+minus
@@ -242,7 +243,7 @@ bind[ws_2] = MOD+eacute
 bind[ws_3] = MOD+quotedbl
 bind[ws_4] = MOD+apostrophe
 bind[ws_5] = MOD+parenleft
-bind[ws_6] = MOD+hyphen
+bind[ws_6] = MOD+minus
 bind[ws_7] = MOD+egrave
 bind[ws_8] = MOD+underscore
 bind[ws_9] = MOD+ccedilla
@@ -265,12 +266,14 @@ bind[alacritty] = MOD+t
 bind[layout_horizontal] = MOD+s
 bind[layout_vertical] = MOD+v
 bind[rofi] = MOD+exclam
+bind[rofi] = MOD+slash
 bind[screenshot] = MOD+Print
 bind[clipshot] = MOD+c
 bind[translate] = MOD+n
 bind[DP] = MOD+y
 bind[fullscreen_toggle] = MOD+Shift+f
 bind[redshift_toggle] = MOD+asterisk
+bind[windows] = MOD+w
 
 # disable default programs
 bind[] = MOD+Shift+Delete # lock
