--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -3,7 +3,7 @@ workspace_limit = 10
 # focus_close = previous
 # focus_close_wrap = 1
 # focus_default = last
-# spawn_position = next
+spawn_position = next
 workspace_clamp = 1
 warp_focus = 1
 warp_pointer = 1
@@ -39,9 +39,9 @@ bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desk
 bar_action = /home/pierre/.local/bin/baru
 # bar_action = /home/pierre/.local/bin/bar.sh
 bar_action_expand = 1
-bar_justify = right
-bar_format = +R:+I +S <+D>  +A+10<
-workspace_indicator = listcurrent,listactive,markcurrent,printnames
+bar_justify = left
+bar_format = +L +|2R +R:+I +S <+D>  +A+10<
+workspace_indicator = listcurrent,listactive,markcurrent
 bar_at_bottom = 1
 # stack_enabled = 1
 clock_enabled = 0
@@ -65,6 +65,9 @@ maximize_hide_bar = 1
 autorun = ws[1]:start-pulseaudio-x11
 autorun = ws[1]:picom --config /home/pierre/.config/picom.conf -b
 autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
+autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=secrets
+autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh
+autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Customize workspace layout at start
 # layout = ws[1]:4:0:0:0:vertical
@@ -130,8 +133,7 @@ program[rofi] = rofi -show drun
 program[windows] = rofi -show window
 program[screenshot] = /home/pierre/.local/bin/screenshot.sh
 program[clipshot] = /home/pierre/.local/bin/clipshot.sh
-program[translate] = vimb https://translate.google.fr/
-program[DP] = alacritty --class sDP -d 13 6 --command /home/pierre/.local/bin/sDP.sh
+program[DP] = /home/pierre/.local/bin/set_dp.sh -fn $bar_font -nb rgb:26/20/18 -nf $bar_font_color -sb $bar_color -sf $bar_font_color_selected
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
@@ -154,7 +156,7 @@ quirk[Pavucontrol] = FLOAT
 quirk[Alacritty:sDP] = FLOAT + FOCUSPREV
 quirk[pritunl] = FLOAT + FOCUSPREV
 quirk[Ristretto] = FLOAT + ANYWHERE
-quirk[jetbrains-webstorm] = FLOAT
+quirk[jetbrains-webstorm:jetbrains-webstorm:win0] = FLOAT
 quirk[Thunar] = FLOAT
 quirk[Galculator] = FLOAT
 quirk[feh] = FLOAT
@@ -269,9 +271,8 @@ bind[rofi] = MOD+exclam
 bind[rofi] = MOD+slash
 bind[screenshot] = MOD+Print
 bind[clipshot] = MOD+c
-bind[translate] = MOD+n
 bind[DP] = MOD+y
-bind[fullscreen_toggle] = MOD+Shift+f
+bind[fullscreen_toggle] = MOD+Shift+e
 bind[redshift_toggle] = MOD+asterisk
 bind[windows] = MOD+w
 
