--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -32,7 +32,7 @@ bar_enabled_ws[2] = 0
 bar_border[1] = rgb:37/40/29
 bar_border_unfocus[1] = rgb:37/40/29
 bar_color[1] = rgb:37/40/29
-bar_color_selected[1] = rgb:37/40/29
+bar_color_selected[1] = rgb:26/20/18
 bar_font_color[1] = rgb:f2/f2/f0,rgb:ed/51/35,rgb:9b/a6/72
 bar_font_color_selected = rgb:f2/f2/f0
 bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desktop:pixelsize=22:antialias=true
@@ -128,12 +128,13 @@ program[redshift_toggle] = pkill -USR1 redshift
 
 # various
 program[alacritty] = alacritty
-program[lock] = /home/pierre/.local/bin/lock.sh
+program[lock] = lock.sh
 program[rofi] = rofi -show drun
 program[windows] = rofi -show window
-program[screenshot] = /home/pierre/.local/bin/screenshot.sh
-program[clipshot] = /home/pierre/.local/bin/clipshot.sh
-program[DP] = /home/pierre/.local/bin/set_dp.sh -fn $bar_font -nb rgb:26/20/18 -nf $bar_font_color -sb $bar_color -sf $bar_font_color_selected
+program[screenshot] = screenshot.sh
+program[clipshot] = clipshot.sh
+program[DP] = set_dp.sh -fn $bar_font -nb $bar_color_selected -nf $bar_font_color -sb $bar_color -sf $bar_font_color_selected
+program[session] = session.sh -fn $bar_font -nb $bar_color_selected -nf $bar_font_color -sb $bar_color -sf $bar_font_color_selected
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
@@ -153,7 +154,6 @@ program[DP] = /home/pierre/.local/bin/set_dp.sh -fn $bar_font -nb rgb:26/20/18 -
 # quirk[pcb:pcb] = FLOAT
 quirk[jetbrains-toolbox] = FLOAT
 quirk[Pavucontrol] = FLOAT
-quirk[Alacritty:sDP] = FLOAT + FOCUSPREV
 quirk[pritunl] = FLOAT + FOCUSPREV
 quirk[Ristretto] = FLOAT + ANYWHERE
 quirk[jetbrains-webstorm:jetbrains-webstorm:win0] = FLOAT
@@ -213,7 +213,7 @@ bind[mvws_8] = MOD+Shift+underscore
 bind[mvws_9] = MOD+Shift+ccedilla
 bind[quit] = MOD+Shift+q
 bind[raise_toggle] = MOD+Shift+r
-# bind[restart] = MOD+q
+bind[session] = MOD+q
 bind[restart] = MOD+r
 bind[rg_1] = MOD+KP_End
 bind[rg_2] = MOD+KP_Down
