add gtk* config

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -10,10 +10,14 @@ warp_pointer = 1
 
 # Window Decoration
 border_width = 4
-color_focus = rgb:42/59/31
-color_focus_maximized = rgb:42/59/31
-color_unfocus = rgb:37/40/29
-color_unfocus_maximized = rgb:37/40/29
+# color_focus = rgb:42/59/31
+# color_focus_maximized = rgb:42/59/31
+# color_unfocus = rgb:37/40/29
+# color_unfocus_maximized = rgb:37/40/29
+color_focus = rgb:40/40/40
+color_focus_maximized = rgb:40/40/40
+color_unfocus = rgb:26/26/26
+color_unfocus_maximized = rgb:26/26/26
 region_padding = 14
 tile_gap = 14
 
@@ -29,12 +33,12 @@ disable_border = always
 bar_enabled = 1
 bar_border_width = 5
 bar_enabled_ws[2] = 0
-bar_border[1] = rgb:37/40/29
-bar_border_unfocus[1] = rgb:37/40/29
-bar_color[1] = rgb:37/40/29
-bar_color_selected[1] = rgb:26/20/18
-bar_font_color[1] = rgb:f2/f2/f0,rgb:ed/51/35,rgb:9b/a6/72
-bar_font_color_selected = rgb:f2/f2/f0
+bar_border[1] = rgb:26/26/26
+bar_border_unfocus[1] = rgb:26/26/26
+bar_color[1] = rgb:26/26/26
+bar_color_selected[1] = rgb:0d/0d/0d
+bar_font_color[1] = rgb:8c/8c/8c,rgb:ed/51/35,rgb:9b/a6/72
+bar_font_color_selected = rgb:8c/8c/8c
 bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desktop:pixelsize=22:antialias=true
 bar_action = /home/pierre/.local/bin/baru
 # bar_action = /home/pierre/.local/bin/bar.sh
@@ -68,6 +72,8 @@ autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
 autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=secrets
 autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh
 autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+autorun = ws[1]:/usr/bin/dunst -c /home/pierre/.config/dunst/dunstrc
+autorun = ws[1]:bato
 
 # Customize workspace layout at start
 # layout = ws[1]:4:0:0:0:vertical
@@ -137,27 +143,9 @@ program[DP] = set_dp.sh -fn $bar_font -nb $bar_color_selected -nf $bar_font_colo
 program[session] = session.sh -fn $bar_font -nb $bar_color_selected -nf $bar_font_color -sb $bar_color -sf $bar_font_color_selected
 
 # QUIRKS
-# Default quirks, remove with: quirk[class:name] = NONE
-# quirk[MPlayer:xv] = FLOAT + FULLSCREEN + FOCUSPREV
-# quirk[OpenOffice.org 2.4:VCLSalFrame] = FLOAT
-# quirk[OpenOffice.org 3.0:VCLSalFrame] = FLOAT
-# quirk[OpenOffice.org 3.1:VCLSalFrame] = FLOAT
-# quirk[Firefox-bin:firefox-bin] = TRANSSZ
-# quirk[Firefox:Dialog] = FLOAT
-# quirk[Gimp:gimp] = FLOAT + ANYWHERE
-# quirk[XTerm:xterm] = XTERM_FONTADJ
-# quirk[xine:Xine Window] = FLOAT + ANYWHERE
-# quirk[Xitk:Xitk Combo] = FLOAT + ANYWHERE
-# quirk[xine:xine Panel] = FLOAT + ANYWHERE
-# quirk[Xitk:Xine Window] = FLOAT + ANYWHERE
-# quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
-# quirk[pcb:pcb] = FLOAT
 quirk[jetbrains-toolbox] = FLOAT
 quirk[Pavucontrol] = FLOAT
-quirk[pritunl] = FLOAT + FOCUSPREV
-quirk[Ristretto] = FLOAT + ANYWHERE
 quirk[jetbrains-webstorm:jetbrains-webstorm:win0] = FLOAT
-quirk[Thunar] = FLOAT
 quirk[Galculator] = FLOAT
 quirk[feh] = FLOAT
 quirk[nnn] = FLOAT
