--- a/.config/baru/baru.yaml
+++ b/.config/baru/baru.yaml
@@ -1,15 +1,22 @@
-bar: '%c  %t  %b  %s   %w  %a    %d'
+bar: '%m  %c  %t  %b  %i  %s   %w  %a    %d'
 tick: 50
 default_font: +@fn=0;
 icon_font: +@fn=1;
 default_color: +@fg=0;
 red: +@fg=1;
 green: +@fg=2;
+battery:
+  full_design: true
+  low_level: 30
 mic:
   index: 1
 wireless:
-  interface: wlp2s0
+  interface: wlan0
   display: Essid
-  max_essid_len: 4
+  max_essid_len: 10
 temperature:
   core_inputs: 2..5
+wired:
+  discrete: true
+memory:
+  display: GiB
