--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -74,6 +74,7 @@ autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh
 autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 autorun = ws[1]:/usr/bin/dunst -c /home/pierre/.config/dunst/dunstrc
 autorun = ws[1]:bato
+autorun = ws[1]:udiskie
 
 # Customize workspace layout at start
 # layout = ws[1]:4:0:0:0:vertical
