--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -260,7 +260,7 @@ bind[rofi] = MOD+exclam
 bind[rofi] = MOD+slash
 bind[screenshot] = MOD+Print
 bind[clipshot] = MOD+c
-bind[DP] = MOD+y
+bind[DP] = MOD+d
 bind[fullscreen_toggle] = MOD+Shift+e
 bind[redshift_toggle] = MOD+asterisk
 bind[windows] = MOD+w
