--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -96,8 +96,6 @@ shadow-exclude = [
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
-# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
 
 #################################
 #
@@ -119,10 +117,11 @@ inactive-opacity-override = false;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+# blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
-    "window_type = 'desktop'"
+    "window_type = 'desktop'",
+    "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -172,10 +171,6 @@ refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
-
-# Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
-# Reported to have no effect, though.
-dbe = false;
 
 # Limit picom to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
