--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -75,6 +75,7 @@ autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 autorun = ws[1]:/usr/bin/dunst -c /home/pierre/.config/dunst/dunstrc
 autorun = ws[1]:bato
 autorun = ws[1]:udiskie
+autorun = ws[1]:set_hhkb.sh
 
 # Customize workspace layout at start
 # layout = ws[1]:4:0:0:0:vertical
