add audio.sh script

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -126,10 +126,10 @@ program[lightUp] = light -A 5
 program[lightDown] = light -U 5
 
 # volume
-program[volumeUp] = pactl set-sink-volume @DEFAULT_SINK@ +5%
-program[volumeDown] = pactl set-sink-volume @DEFAULT_SINK@ -5%
-program[volumeMute] = pactl set-sink-mute @DEFAULT_SINK@ toggle
-program[micMute] = pactl set-source-mute 1 toggle
+program[volumeUp] = audio.sh up
+program[volumeDown] = audio.sh down
+program[volumeMute] = audio.sh sink_mute
+program[micMute] = audio.sh source_mute
 
 #redshift
 program[redshift_toggle] = pkill -USR1 redshift
