--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -122,14 +122,14 @@ keyboard_mapping = /dev/null
 # bind[firefox] = MOD+Shift+b
 
 # brightness
-program[lightUp] = light -A 5
-program[lightDown] = light -U 5
+program[lightUp] = pral.sh light_up
+program[lightDown] = pral.sh light_down
 
-# volume
-program[volumeUp] = audio.sh up
-program[volumeDown] = audio.sh down
-program[volumeMute] = audio.sh sink_mute
-program[micMute] = audio.sh source_mute
+# audio
+program[volumeUp] = pral.sh sink_up
+program[volumeDown] = pral.sh sink_down
+program[volumeMute] = pral.sh sink_mute
+program[micMute] = pral.sh source_mute
 
 #redshift
 program[redshift_toggle] = pkill -USR1 redshift
