--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -73,7 +73,7 @@ autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=secrets
 autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh
 autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 autorun = ws[1]:/usr/bin/dunst -c /home/pierre/.config/dunst/dunstrc
-autorun = ws[1]:bato
+autorun = ws[1]:launch_bato.sh
 autorun = ws[1]:udiskie
 autorun = ws[1]:set_hhkb.sh
 
