--- a/.config/bato/bato.yaml
+++ b/.config/bato/bato.yaml
@@ -2,12 +2,23 @@ tick_rate: 1
 critical_level: 5
 low_level: 30
 critical:
-  summary: Critical battery level!
+  summary: Battery
+  body: Critical!
   icon: battery-caution
 low:
-  summary: Battery low
+  summary: Battery
+  body: Low
   icon: battery-040
 full:
-  summary: Battery full
+  summary: Battery
+  body: Full
   icon: battery-full
   urgency: Normal
+charging:
+  summary: Battery
+  body: Charging
+  icon: battery-good-charging
+discharging:
+  summary: Battery
+  body: Discharging
+  icon: battery-good
