--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -39,7 +39,7 @@ bar_color[1] = rgb:26/26/26
 bar_color_selected[1] = rgb:0d/0d/0d
 bar_font_color[1] = rgb:8c/8c/8c,rgb:ed/51/35,rgb:9b/a6/72
 bar_font_color_selected = rgb:8c/8c/8c
-bar_font = JetBrains Mono:pixelsize=22:antialias=true,Material Design Icons Desktop:pixelsize=22:antialias=true
+bar_font = JetBrainsMono Nerd Font:pixelsize=22:antialias=true
 bar_action = /home/pierre/.local/bin/baru
 # bar_action = /home/pierre/.local/bin/bar.sh
 bar_action_expand = 1
