--- a/.config/baru/baru.yaml
+++ b/.config/baru/baru.yaml
@@ -1,22 +1,49 @@
-bar: '%m  %c  %t  %b  %i  %s   %w  %a    %d'
+format: '%m  %c  %t  %b  %i  %s   %w%e  %a    %d'
 tick: 50
-default_font: +@fn=0;
-icon_font: +@fn=1;
-default_color: +@fg=0;
-red: +@fg=1;
-green: +@fg=2;
 battery:
   full_design: true
   low_level: 30
+  full_label: '󰁹'
+  charging_label: '󰂊'
+  discharging_label: '󰂁'
+  low_label: '󰁻'
+  unknown_label: '󱃍'
+  format: '%v %l'
+brightness:
+  label: '󰃟'
+  format: '%v %l'
+cpu:
+  label: '󰻠'
+  high_label: '󰈸'
+  format: '%v %l'
+memory:
+  label: '󰍛'
+  high_label: '󰈸'
+  format: '%v %l'
 mic:
   index: 1
+  label: '󰍬'
+  mute_label: '󰍭'
+  format: '%v %l'
+sound:
+  index: 0
+  label: '󰕾'
+  mute_label: '󰝟'
+  format: '%v %l'
+temperature:
+  core_inputs: 2..5
+  label: '󰔏'
+  high_label: '󱃂'
+  format: '%v %l'
+wired:
+  discrete: true
+  label: '󰈁'
+  disconnected_label: '󰈂'
+  format: '%l'
 wireless:
   interface: wlan0
   display: Essid
-  max_essid_len: 10
-temperature:
-  core_inputs: 2..5
-wired:
-  discrete: true
-memory:
-  display: GiB
+  max_essid_len: 5
+  label: '󰤥'
+  disconnected_label: '󰤮'
+  format: '%v %l'
