--- a/.config/baru/baru.yaml
+++ b/.config/baru/baru.yaml
@@ -1,5 +1,6 @@
 format: '%m  %c  %t  %b  %i  %s   %w%e  %a    %d'
 tick: 50
+pulse_tick: 50
 battery:
   full_design: true
   low_level: 30
@@ -33,7 +34,7 @@ sound:
 temperature:
   core_inputs: 2..5
   label: '󰔏'
-  high_label: '󱃂'
+  high_label: '󰈸'
   format: '%v %l'
 wired:
   discrete: true
