--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -752,6 +752,7 @@ font:
 key_bindings:
   - { key: 11,     mods: Control,       action: ResetFontSize    } # key = 0
   - { key: K,      mods: Control|Shift,         action: ClearHistory     }
+  - { key: T,      mods: Alt,            action: SpawnNewInstance }
 
 schemes:
   nord: &nord
