--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -69,9 +69,7 @@ maximize_hide_bar = 1
 autorun = ws[1]:start-pulseaudio-x11
 autorun = ws[1]:picom --config /home/pierre/.config/picom.conf -b
 autorun = ws[1]:redshift -c /home/pierre/.config/redshift/redshift.conf
-autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=secrets
-autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh
-autorun = ws[1]:/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+autorun = ws[1]:/usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11 -d
 autorun = ws[1]:/usr/bin/dunst -c /home/pierre/.config/dunst/dunstrc
 autorun = ws[1]:launch_bato.sh
 autorun = ws[1]:udiskie
