--- a/xsessions/dwm.desktop
+++ b/xsessions/dwm.desktop
@@ -3,4 +3,5 @@ Name=dwm
 Comment=dynamic window manager
 Type=Application
 Exec=/home/pierre/.local/bin/launch_dwm.sh
+TryExec=dwm
 Keywords=tiling;window;manager;wm;
