--- a/.config/luaformatter/config.yaml
+++ b/.config/luaformatter/config.yaml
@@ -4,3 +4,5 @@ use_tab: false
 tab_width: 2
 continuation_indent_width: 2
 extra_sep_at_table_end: true
+keep_simple_control_block_one_line: false
+keep_simple_function_one_line: false
