--- a/.config/tiny/config.yml
+++ b/.config/tiny/config.yml
@@ -13,6 +13,7 @@ servers:
       join:
           - "#archlinux"
           - "#archlinux-aur"
+          - "#xmonad"
 
       # Three authentication methods: pass, sasl, and nickserv_ident
       # These are optional and you probably only need one of these, delete
