--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -854,7 +854,7 @@ font:
 key_bindings:
   - { key: 11,     mods: Control,                 action: ResetFontSize      } # key = 0
   - { key: K,      mods: Control|Shift,           action: ClearHistory       }
-  - { key: T,      mods: Alt,                     action: SpawnNewInstance   }
+  - { key: T,      mods: Super|Shift,             action: SpawnNewInstance   }
   - { key: F,      mods: Control|Shift,           action: SearchBackward     }
   - { key: H,      mods: Control,       mode: Vi, action: SemanticLeft       }
   - { key: L,      mods: Control,       mode: Vi, action: SemanticRight      }
