--- a/.local/share/applications/insomnia.desktop
+++ b/.local/share/applications/insomnia.desktop
@@ -5,8 +5,8 @@ Type=Application
 Version=1.0
 Name=Insomnia
 Comment=HTTP and GraphQL Client
-Path=/opt/insomnia
-Exec=./Insomnia.AppImage
+Path=/opt/AppImages/
+Exec=./insomnia.AppImage
 Icon=insomnia
 Terminal=false
 Categories=Development;
